import {
  Entity,
  PrimaryGeneratedColumn,
  Column,
  CreateDateColumn,
  UpdateDateColumn,
  ManyToOne,
  JoinColumn,
  Index,
  ManyToMany,
  JoinTable,
} from "typeorm";
import { Team } from "./Team";
import { Partner } from "./Partner";

@Entity({ name: "team_members", schema: "partner" })
export class TeamMember {
  @PrimaryGeneratedColumn("uuid")
  uid: string;

  @Column({ type: "varchar", length: 255, name: "external_uid" })
  @Index()
  externalUid: string;

  @Column({
    type: "timestamp",
    default: () => "CURRENT_TIMESTAMP",
    name: "joined_at",
  })
  joinedAt: Date;

  @CreateDateColumn({ name: "created_at" })
  createdAt: Date;

  @UpdateDateColumn({ name: "updated_at" })
  updatedAt: Date;

  @Column({ type: "timestamp", name: "deleted_at", nullable: true })
  deletedAt: Date | null;

  // Relations
  @ManyToOne(() => Partner, (partner) => partner.uid)
  @JoinColumn({ name: "partner_uid" })
  partner: Partner;

  @ManyToMany(() => Team)
  @JoinTable({
    name: "team_members_teams",
  })
  teams: Team[];
}
